[gd_scene load_steps=4 format=3 uid="uid://173s3r81wvlo"]

[ext_resource type="Texture2D" uid="uid://dyqoo251hnuwy" path="res://assets/bomb/air-bomb.png" id="1_4fyjq"]
[ext_resource type="Script" path="res://player/bomb.gd" id="1_tvvv8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5cadr"]
radius = 3.0
height = 16.0

[node name="Bomb" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 2.524
sleeping = true
freeze = true
script = ExtResource("1_tvvv8")
metadata/_edit_group_ = true

[node name="Air-bomb" type="Sprite2D" parent="."]
position = Vector2(-0.760001, 5.24)
scale = Vector2(0.04, 0.04)
texture = ExtResource("1_4fyjq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_5cadr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
